objects/Affordability_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTI_Threshold__c</fullName>
        <label>DTI Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decrease_Loan_Amount_By__c</fullName>
        <label>Decrease Loan Amount By</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Loan_Amount_Percent__c</fullName>
        <label>Min Loan Amount Offered Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pension_Rate_Buffer__c</fullName>
        <label>Pension Rate Buffer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Buffer__c</fullName>
        <label>Rate Buffer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revolving_Credit_Percent_As_Expense__c</fullName>
        <label>Revolving Credit Percent As Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Affordability Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Affordability Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Affordability Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>